@@ -1,2 +1,30 @@
 # algorithm-visualizer-javafx
 A JavaFX application that visualizes sorting and searching algorithms with animation and user controls.
+## Features
+
+- Visual animations for sorting & searching
+- Speed control slider
+- Pause / Resume / Step-by-step execution
+- Real-time comparison & swap counters
+- Clean and modern UI with colored bars
+- Educational tool to understand how algorithms work
+
+### Supported Algorithms
+
+## Sorting algorthims: 
+- Bubble Sort
+- Selection Sort
+- Insertion Sort
+- Quick Sort
+- Merge Sort
+- Heap Sort
+
+ ## Searching Algorithms:
+- Linear Search
+- Binary Search
+
+### Prerequisites:
+- Java 24 installed ([Download](https://jdk.java.net/24/))
+- JavaFX SDK installed (for Java 24)
+- An IDE like **IntelliJ IDEA** or **VS Code**
+- Edit VM options for running Main.java - --module-path "path\to\javafx-sdk-XX\lib" --add-modules javafx.controls,javafx.fxml
